--- a/Ecommerce.Web/Views/Shared/_Layouts.cshtml
+++ b/Ecommerce.Web/Views/Shared/_Layouts.cshtml
@@ -5,23 +5,16 @@
     <!-- Basic -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <title>Demo Shop 12 | Porto - Responsive HTML5 Template 5.7.1</title>
-
-    <meta name="keywords" content="HTML5 Template" />
-    <meta name="description" content="Porto - Responsive HTML5 Template">
+    <title>Ecommerce</title>
+    <meta name="keywords" content="Ecommerce" />
+    <meta name="description" content="Ecommerce">
     <meta name="author" content="okler.net">
-
-    <!-- Favicon -->
     <link rel="shortcut icon" href="/Assets/images/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="/Assets/images/apple-touch-icon.png">
-
     <!-- Mobile Metas -->
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
     <!-- Web Fonts  -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800%7CShadows+Into+Light" rel="stylesheet" type="text/css">
-
     <!-- Vendor CSS -->
     <link rel="stylesheet" href="/Assets/vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/Assets/vendor/font-awesome/css/font-awesome.min.css">
@@ -30,28 +23,16 @@
     <link rel="stylesheet" href="/Assets/vendor/owl.carousel/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="/Assets/vendor/owl.carousel/assets/owl.theme.default.min.css">
     <link rel="stylesheet" href="/Assets/vendor/magnific-popup/magnific-popup.min.css">
-
-    <!-- Theme CSS -->
     <link rel="stylesheet" href="/Assets/css/theme.css">
     <link rel="stylesheet" href="/Assets/css/theme-elements.css">
     <link rel="stylesheet" href="/Assets/css/theme-blog.css">
     <link rel="stylesheet" href="/Assets/css/theme-shop.css">
-
-    <!-- Current Page CSS -->
     <link rel="stylesheet" href="/Assets/vendor/rs-plugin/css/settings.css">
     <link rel="stylesheet" href="/Assets/vendor/rs-plugin/css/layers.css">
     <link rel="stylesheet" href="/Assets/vendor/rs-plugin/css/navigation.css">
-
-    <!-- Skin CSS -->
     <link rel="stylesheet" href="/Assets/css/skins/skin-shop-12.css">
-
-    <!-- Demo CSS -->
     <link rel="stylesheet" href="/Assets/css/demos/demo-shop-12.css">
-
-    <!-- Theme Custom CSS -->
     <link rel="stylesheet" href="/Assets/css/custom.css">
-
-    <!-- Head Libs -->
     <script src="/Assets/vendor/modernizr/modernizr.min.js"></script>
 </head>
 <body>
@@ -89,20 +70,10 @@
     <script src="/Assets/vendor/owl.carousel/owl.carousel.min.js"></script>
     <script src="/Assets/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
     <script src="/Assets/vendor/vide/vide.min.js"></script>
-
-    <!-- Theme Base, Components and Settings -->
     <script src="/Assets/js/theme.js"></script>
-
-    <!-- Current Page Vendor and Views -->
     <script src="/Assets/js/views/view.contact.js"></script>
-
-    <!-- Demo -->
     <script src="/Assets/js/demos/demo-shop-12.js"></script>
-
-    <!-- Theme Custom -->
     <script src="/Assets/js/custom.js"></script>
-
-    <!-- Theme Initialization Files -->
     <script src="/Assets/js/theme.init.js"></script>
 </body>
 </html>
