--- a/Ecommerce.Web/Views/Home/Index.cshtml
+++ b/Ecommerce.Web/Views/Home/Index.cshtml
@@ -55,19 +55,24 @@
             @foreach (var product in Model.LastestProducts)
             {
                 var url = "/" + product.Alias + ".p-" + product.ID + ".html";
+                var discount = Math.Round(double.Parse((100 - ((product.PromotionPrice / product.Price) * 100)).ToString()));
+                
                 <li>
                     <div class="product">
                         <figure class="product-image-area">
-                            <a href="demo-shop-12-product-details.html" title="Product Name" class="product-image">
-                                @product.ThumbnailImage
+                            <a href="@url" title="Product Name" class="product-image">
+                                <img src="@product.ThumbnailImage" title="@product.Alias" alt="@product.Alias" />
                             </a>
 
                             <a href="#" class="product-quickview">
                                 <i class="fa fa-share-square-o"></i>
                                 <span>Quick View</span>
                             </a>
-                            <div class="product-label"><span class="discount">-10%</span></div>
                             <div class="product-label"><span class="new">New</span></div>
+                            @if (discount > 0)
+                            {
+                                <div class="product-label"><span class="discount">-@discount%</span></div>
+                            }
                         </figure>
                         <div class="product-details-area">
                             <h2 class="product-name"><a href="demo-shop-12-product-details.html" title="Product Name">
@@ -80,8 +85,11 @@
                             </div>
 
                             <div class="product-price-box">
-                                <span class="old-price">$99.00</span>
-                                <span class="product-price">@product.Price.ToString("N0")</span>
+                                @if (product.PromotionPrice.HasValue)
+                                {
+                                    <span class="old-price">@product.PromotionPrice.Value.ToString("N0") đ</span>
+                                }
+                                <span class="product-price">@product.Price.ToString("N0") đ</span>
                             </div>
 
                             <div class="product-actions">
@@ -406,207 +414,61 @@
 <div class="container">
     <div class="home-products-carousel-container">
         <h2 class="slider-title">
-            <span class="inline-title">FASHION SELECTION</span>
+            <span class="inline-title">HOT PRODUCT</span>
         </h2>
 
         <div class="owl-carousel owl-theme manual home-products-carousel">
-            <div class="product">
-                <figure class="product-image-area">
-                    <a href="demo-shop-12-product-details.html" title="Product Name" class="product-image">
-                        <img src="/Assets/images/demos/shop/products/shop10/product2.jpg" alt="Product Name">
-                        <img src="/Assets/images/demos/shop/products/shop10/product2-2.jpg" alt="Product Name" class="product-hover-image">
-                    </a>
+            @foreach (var product in Model.HotProducts)
+            {
+                var url = "/" + product.Alias + ".p-" + product.ID + ".html";
+                var discount = Math.Round(double.Parse((100 - ((product.PromotionPrice / product.Price) * 100)).ToString()));
+                <div class="product">
+                    <figure class="product-image-area">
+                        <a href="@url" title="@product.Name" class="product-image">
+                            <img src="@product.ThumbnailImage" alt="@product.Name">
+                            <img src="@product.ThumbnailImage" alt="@product.Name" class="product-hover-image">
+                        </a>
 
-                    <a href="#" class="product-quickview">
-                        <i class="fa fa-share-square-o"></i>
-                        <span>Quick View</span>
-                    </a>
-                    <div class="product-label"><span class="discount">-10%</span></div>
-                    <div class="product-label"><span class="new">New</span></div>
-                </figure>
-                <div class="product-details-area">
-                    <h2 class="product-name"><a href="demo-shop-12-product-details.html" title="Product Name">Noa Sheer Blouse</a></h2>
-                    <div class="product-ratings">
-                        <div class="ratings-box">
-                            <div class="rating" style="width:60%"></div>
+                        <a href="#" class="product-quickview">
+                            <i class="fa fa-share-square-o"></i>
+                            <span>Quick View</span>
+                        </a>
+                        @if (discount > 0)
+                        {
+                            <div class="product-label"><span class="discount">-@discount%</span></div>
+                        }
+                    </figure>
+                    <div class="product-details-area">
+                        <h2 class="product-name"><a href="@url" title="@product.Name">@product.Name</a></h2>
+                        <div class="product-ratings">
+                            <div class="ratings-box">
+                                <div class="rating" style="width:60%"></div>
+                            </div>
+                        </div>
+
+                        <div class="product-price-box">
+                            @if (product.PromotionPrice.HasValue)
+                            {
+                                <span class="old-price">@product.PromotionPrice.Value.ToString("N0") đ</span>
+                            }
+                            <span class="product-price">@product.Price.ToString("N0") đ</span>
+                        </div>
+
+                        <div class="product-actions">
+                            <a href="#" class="addtowishlist" title="Add to Wishlist">
+                                <i class="fa fa-heart"></i>
+                            </a>
+                            <a href="#" class="addtocart" title="Add to Cart">
+                                <i class="fa fa-shopping-cart"></i>
+                                <span>Add to Cart</span>
+                            </a>
+                            <a href="#" class="comparelink" title="Add to Compare">
+                                <i class="glyphicon glyphicon-signal"></i>
+                            </a>
                         </div>
                     </div>
-
-                    <div class="product-price-box">
-                        <span class="old-price">$99.00</span>
-                        <span class="product-price">$89.00</span>
-                    </div>
-
-                    <div class="product-actions">
-                        <a href="#" class="addtowishlist" title="Add to Wishlist">
-                            <i class="fa fa-heart"></i>
-                        </a>
-                        <a href="#" class="addtocart" title="Add to Cart">
-                            <i class="fa fa-shopping-cart"></i>
-                            <span>Add to Cart</span>
-                        </a>
-                        <a href="#" class="comparelink" title="Add to Compare">
-                            <i class="glyphicon glyphicon-signal"></i>
-                        </a>
-                    </div>
                 </div>
-            </div>
-
-            <div class="product">
-                <figure class="product-image-area">
-                    <a href="demo-shop-12-product-details.html" title="Product Name" class="product-image">
-                        <img src="/Assets/images/demos/shop/products/shop10/product2.jpg" alt="Product Name">
-                    </a>
-
-                    <a href="#" class="product-quickview">
-                        <i class="fa fa-share-square-o"></i>
-                        <span>Quick View</span>
-                    </a>
-                    <div class="product-label"><span class="discount">-25%</span></div>
-                </figure>
-                <div class="product-details-area">
-                    <h2 class="product-name"><a href="demo-shop-12-product-details.html" title="Product Name">Women Fashion Blouse</a></h2>
-                    <div class="product-ratings">
-                        <div class="ratings-box">
-                            <div class="rating" style="width:0%"></div>
-                        </div>
-                    </div>
-
-                    <div class="product-price-box">
-                        <span class="old-price">$120.00</span>
-                        <span class="product-price">$90.00</span>
-                    </div>
-
-                    <div class="product-actions">
-                        <a href="#" class="addtowishlist" title="Add to Wishlist">
-                            <i class="fa fa-heart"></i>
-                        </a>
-                        <a href="#" class="addtocart" title="Add to Cart">
-                            <i class="fa fa-shopping-cart"></i>
-                            <span>Add to Cart</span>
-                        </a>
-                        <a href="#" class="comparelink" title="Add to Compare">
-                            <i class="glyphicon glyphicon-signal"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="product">
-                <figure class="product-image-area">
-                    <a href="demo-shop-12-product-details.html" title="Product Name" class="product-image">
-                        <img src="/Assets/images/demos/shop/products/shop10/product3.jpg" alt="Product Name">
-                    </a>
-
-                    <a href="#" class="product-quickview">
-                        <i class="fa fa-share-square-o"></i>
-                        <span>Quick View</span>
-                    </a>
-                </figure>
-                <div class="product-details-area">
-                    <h2 class="product-name"><a href="demo-shop-12-product-details.html" title="Product Name">Fashion Dress</a></h2>
-                    <div class="product-ratings">
-                        <div class="ratings-box">
-                            <div class="rating" style="width:60%"></div>
-                        </div>
-                    </div>
-
-                    <div class="product-price-box">
-                        <span class="product-price">$70.00</span>
-                    </div>
-
-                    <div class="product-actions">
-                        <a href="#" class="addtowishlist" title="Add to Wishlist">
-                            <i class="fa fa-heart"></i>
-                        </a>
-                        <a href="#" class="addtocart" title="Add to Cart">
-                            <i class="fa fa-shopping-cart"></i>
-                            <span>Add to Cart</span>
-                        </a>
-                        <a href="#" class="comparelink" title="Add to Compare">
-                            <i class="glyphicon glyphicon-signal"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="product">
-                <figure class="product-image-area">
-                    <a href="demo-shop-12-product-details.html" title="Product Name" class="product-image">
-                        <img src="/Assets/images/demos/shop/products/shop10/product4.jpg" alt="Product Name">
-                    </a>
-
-                    <a href="#" class="product-quickview">
-                        <i class="fa fa-share-square-o"></i>
-                        <span>Quick View</span>
-                    </a>
-                    <div class="product-label"><span class="discount">-20%</span></div>
-                </figure>
-                <div class="product-details-area">
-                    <h2 class="product-name"><a href="demo-shop-12-product-details.html" title="Product Name">Fashion Sweater</a></h2>
-                    <div class="product-ratings">
-                        <div class="ratings-box">
-                            <div class="rating" style="width:80%"></div>
-                        </div>
-                    </div>
-
-                    <div class="product-price-box">
-                        <span class="old-price">$100.00</span>
-                        <span class="product-price">$90.00</span>
-                    </div>
-
-                    <div class="product-actions">
-                        <a href="#" class="addtowishlist" title="Add to Wishlist">
-                            <i class="fa fa-heart"></i>
-                        </a>
-                        <a href="#" class="addtocart" title="Add to Cart">
-                            <i class="fa fa-shopping-cart"></i>
-                            <span>Add to Cart</span>
-                        </a>
-                        <a href="#" class="comparelink" title="Add to Compare">
-                            <i class="glyphicon glyphicon-signal"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="product">
-                <figure class="product-image-area">
-                    <a href="demo-shop-12-product-details.html" title="Product Name" class="product-image">
-                        <img src="/Assets/images/demos/shop/products/shop10/product5.jpg" alt="Product Name">
-                    </a>
-
-                    <a href="#" class="product-quickview">
-                        <i class="fa fa-share-square-o"></i>
-                        <span>Quick View</span>
-                    </a>
-                </figure>
-                <div class="product-details-area">
-                    <h2 class="product-name"><a href="demo-shop-12-product-details.html" title="Product Name">Woman Shee Blouse</a></h2>
-                    <div class="product-ratings">
-                        <div class="ratings-box">
-                            <div class="rating" style="width:0%"></div>
-                        </div>
-                    </div>
-
-                    <div class="product-price-box">
-                        <span class="product-price">$70.00</span>
-                    </div>
-
-                    <div class="product-actions">
-                        <a href="#" class="addtowishlist" title="Add to Wishlist">
-                            <i class="fa fa-heart"></i>
-                        </a>
-                        <a href="#" class="addtocart" title="Add to Cart">
-                            <i class="fa fa-shopping-cart"></i>
-                            <span>Add to Cart</span>
-                        </a>
-                        <a href="#" class="comparelink" title="Add to Compare">
-                            <i class="glyphicon glyphicon-signal"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
+            }
         </div>
     </div>
 </div>
