--- a/Ecommerce.Web/Views/Shared/_Layouts.cshtml
+++ b/Ecommerce.Web/Views/Shared/_Layouts.cshtml
@@ -74,5 +74,7 @@
     <script src="/Assets/js/demos/demo-shop-12.js"></script>
     <script src="/Assets/js/custom.js"></script>
     <script src="/Assets/js/theme.init.js"></script>
+
+    @RenderSection("footerJS", required: false);
 </body>
 </html>
