--- a/Ecommerce.Web/Views/Home/Index.cshtml
+++ b/Ecommerce.Web/Views/Home/Index.cshtml
@@ -168,7 +168,7 @@
                                         {
                                             <span class="old-price">@product.PromotionPrice.Value.ToString("N0") đ</span>
                                         }
-                                        <span class="product-price">@product.Price</span>
+                                        <span class="product-price">@product.Price.ToString("N0") đ</span>
                                     </div>
                                 </div>
                             </div>
@@ -215,7 +215,7 @@
                                         {
                                             <span class="old-price">@product.PromotionPrice.Value.ToString("N0") đ</span>
                                         }
-                                        <span class="product-price">@product.Price</span>
+                                        <span class="product-price">@product.Price.ToString("N0") đ</span>
                                     </div>
                                 </div>
                             </div>
@@ -262,7 +262,7 @@
                                         {
                                             <span class="old-price">@product.PromotionPrice.Value.ToString("N0") đ</span>
                                         }
-                                        <span class="product-price">@product.Price</span>
+                                        <span class="product-price">@product.Price.ToString("N0") đ</span>
                                     </div>
                                 </div>
                             </div>
