--- a/Ecommerce.Web/Views/Home/Index.cshtml
+++ b/Ecommerce.Web/Views/Home/Index.cshtml
@@ -103,9 +103,9 @@
                                 <a href="#" class="addtowishlist" title="Add to Wishlist">
                                     <i class="fa fa-heart"></i>
                                 </a>
-                                <a href="#" class="addtocart" title="Add to Cart">
+                                <a href="javascript:" class="addtocart btnAddToCart" title="Thêm Vào Giỏ Hàng" data-id="@product.ID">
                                     <i class="fa fa-shopping-cart"></i>
-                                    <span>Add to Cart</span>
+                                    <span>Thêm Vào Giỏ Hàng</span>
                                 </a>
                                 <a href="#" class="comparelink" title="Add to Compare">
                                     <i class="glyphicon glyphicon-signal"></i>
@@ -351,9 +351,9 @@
                             <a href="#" class="addtowishlist" title="Add to Wishlist">
                                 <i class="fa fa-heart"></i>
                             </a>
-                            <a href="#" class="addtocart" title="Add to Cart">
+                            <a href="javascript:" class="addtocart btnAddToCart" title="Thêm Vào Giỏ Hàng" data-id="@product.ID">
                                 <i class="fa fa-shopping-cart"></i>
-                                <span>Add to Cart</span>
+                                <span>Thêm Vào Giỏ Hàng</span>
                             </a>
                             <a href="#" class="comparelink" title="Add to Compare">
                                 <i class="glyphicon glyphicon-signal"></i>
