--- a/Ecommerce.Web/Views/Shared/Header.cshtml
+++ b/Ecommerce.Web/Views/Shared/Header.cshtml
@@ -1,38 +1,34 @@
 ﻿@model IEnumerable<Ecommerce.Web.Models.ProductCategoryViewModel>
+@using Microsoft.AspNet.Identity;
 <div class="container">
     <header id="header" data-plugin-options="{'stickyEnabled': false, 'stickyEnableOnBoxed': false, 'stickyEnableOnMobile': false, 'stickyStartAt': 147, 'stickySetTop': '-147px', 'stickyChangeLogo': false}">
         <div class="header-body">
             <div class="header-top">
                 <div class="container">
                     <div class="dropdowns-container">
-                        <div class="header-dropdown cur-dropdown">
-                            <a href="#">USD <i class="fa fa-caret-down"></i></a>
-
-                            <ul class="header-dropdownmenu">
-                                <li><a href="#">EUR</a></li>
-                                <li><a href="#">USD</a></li>
-                            </ul>
-                        </div>
-
-                        <div class="header-dropdown lang-dropdown">
-                            <a href="#"><img src="/Assets/images/demos/shop/en.png" alt="English">English <i class="fa fa-caret-down"></i></a>
-
-                            <ul class="header-dropdownmenu">
-                                <li><a href="#"><img src="/Assets/images/demos/shop/en.png" alt="English">English</a></li>
-                                <li><a href="#"><img src="/Assets/images/demos/shop/fr.png" alt="French">French</a></li>
-                            </ul>
-                        </div>
-                       
                     </div>
 
                     <div class="top-menu-area">
                         <a href="#">Links <i class="fa fa-caret-down"></i></a>
                         <ul class="top-menu">
+                            <li><a href="trang-chu.html">Trang Chủ</a></li>
                             <li><a href="gioi-thieu.html">Giới Thiệu</a></li>
-                            <li><a href="tai-khoan.html">Tài Khoản</a></li>
                             <li><a href="gio-hang.html">Giỏ Hàng</a></li>
-                            <li><a href="dang-ky.html">Đăng Ký</a></li>
-                            <li><a href="dang-nhap.html">Đăng Nhập</a></li>
+                            @if (Request.IsAuthenticated)
+                            {
+                                <li>Xin chào: <a href="tai-khoan.html">@User.Identity.Name</a></li>
+                                <li style="display:inline-block">
+                                    @using (Html.BeginForm("Logout", "Account", FormMethod.Post)){
+                                        @Html.AntiForgeryToken()
+                                        <button type="submit" style="border:none;background:none;">ĐĂNG XUẤT</button>
+                                    }
+                                </li>
+                            }
+                            else
+                            {
+                                <li><a href="dang-ky.html">Đăng Ký</a></li>
+                                <li><a href="dang-nhap.html">Đăng Nhập</a></li>
+                            }
                         </ul>
                     </div>
                 </div>
@@ -41,7 +37,7 @@
                 <div class="header-row">
                     <div class="header-column">
                         <div class="header-logo">
-                            <a href="demo-shop-12.html">
+                            <a href="trang-chu.html">
                                 <img alt="Porto" width="111" height="51" src="/Assets/images/demos/shop/logo-shop-white.png">
                             </a>
                         </div>
@@ -51,99 +47,18 @@
                             <div class="cart-area">
                                 <div class="custom-block">
                                     <i class="fa fa-phone"></i>
-                                    <span>(+404) 158 14 25 78</span>
+                                    <span>(+84) 1868133191</span>
                                     <span class="split"></span>
-                                    <a href="#">CONTACT US</a>
-                                </div>
-
-                                <div class="cart-dropdown">
-                                    <a href="#" class="cart-dropdown-icon">
-                                        <i class="minicart-icon"></i>
-                                        <span class="cart-info">
-                                            <span class="cart-qty">2</span>
-                                            <span class="cart-text">item(s)</span>
-                                        </span>
-                                    </a>
-
-                                    <div class="cart-dropdownmenu right">
-                                        <div class="dropdownmenu-wrapper">
-                                            <div class="cart-products">
-                                                <div class="product product-sm">
-                                                    <a href="#" class="btn-remove" title="Remove Product">
-                                                        <i class="fa fa-times"></i>
-                                                    </a>
-                                                    <figure class="product-image-area">
-                                                        <a href="demo-shop-12-product-details.html" title="Product Name" class="product-image">
-                                                            <img src="/Assets/images/demos/shop/products/thumbs/cart-product1.jpg" alt="Product Name">
-                                                        </a>
-                                                    </figure>
-                                                    <div class="product-details-area">
-                                                        <h2 class="product-name"><a href="demo-shop-12-product-details.html" title="Product Name">Blue Women Top</a></h2>
-
-                                                        <div class="cart-qty-price">
-                                                            1 X
-                                                            <span class="product-price">$65.00</span>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="product product-sm">
-                                                    <a href="#" class="btn-remove" title="Remove Product">
-                                                        <i class="fa fa-times"></i>
-                                                    </a>
-                                                    <figure class="product-image-area">
-                                                        <a href="demo-shop-12-product-details.html" title="Product Name" class="product-image">
-                                                            <img src="/Assets/images/demos/shop/products/thumbs/cart-product2.jpg" alt="Product Name">
-                                                        </a>
-                                                    </figure>
-                                                    <div class="product-details-area">
-                                                        <h2 class="product-name"><a href="demo-shop-12-product-details.html" title="Product Name">Black Utility Top</a></h2>
-
-                                                        <div class="cart-qty-price">
-                                                            1 X
-                                                            <span class="product-price">$39.00</span>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                            <div class="cart-totals">
-                                                Total: <span>$104.00</span>
-                                            </div>
-
-                                            <div class="cart-actions">
-                                                <a href="demo-shop-12-cart.html" class="btn btn-primary">View Cart</a>
-                                                <a href="demo-shop-12-checkout.html" class="btn btn-primary">Checkout</a>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    <a href="gioi-thieu.html">LIÊN HỆ</a>
                                 </div>
                             </div>
 
                             <div class="header-search">
                                 <a href="#" class="search-toggle"><i class="fa fa-search"></i></a>
-                                <form action="#" method="get">
+                                <form action="/tim-kiem.html" method="get">
                                     <div class="header-search-wrapper">
-                                        <input type="text" class="form-control" name="q" id="q" placeholder="Search..." required>
-                                        <select id="cat" name="cat">
-                                            <option value="">All Categories</option>
-                                            <option value="4">Fashion</option>
-                                            <option value="12">- Women</option>
-                                            <option value="13">- Men</option>
-                                            <option value="66">- Jewellery</option>
-                                            <option value="67">- Kids Fashion</option>
-                                            <option value="5">Electronics</option>
-                                            <option value="21">- Smart TVs</option>
-                                            <option value="22">- Cameras</option>
-                                            <option value="63">- Games</option>
-                                            <option value="7">Home &amp; Garden</option>
-                                            <option value="11">Motors</option>
-                                            <option value="31">- Cars and Trucks</option>
-                                            <option value="32">- Motorcycles &amp; Powersports</option>
-                                            <option value="33">- Parts &amp; Accessories</option>
-                                            <option value="34">- Boats</option>
-                                            <option value="57">- Auto Tools &amp; Supplies</option>
-                                        </select>
-                                        <button class="btn btn-default" type="submit"><i class="fa fa-search"></i></button>
+                                        <input type="text" class="form-control" placeholder="Từ khóa..." id="txtKeyword" name="keyword" >
+                                        <button class="btn btn-default" type="submit" id="btnSearch"><i class="fa fa-search"></i></button>
                                     </div>
                                 </form>
                             </div>
